apps/production/apple-health-lake/service-mcpserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-health-lake-mcp
  namespace: default
  labels:
    app.kubernetes.io/instance: apple-health-lake
    app.kubernetes.io/name: apple-health-lake
    app.kubernetes.io/component: mcp-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: apple-health-lake
    app.kubernetes.io/instance: apple-health-lake
    app.kubernetes.io/component: mcp-server
